syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.examples.proto.api";
option java_multiple_files = true;
option java_outer_classname = "VisitsServiceProto";

package visitsservice;

message GetVisitsForPetRequest { uint32 pet_id = 1; }

message GetVisitsForPetsRequest { repeated uint32 pet_ids = 1; }

message VisitId { uint32 value = 1; }

message Visit {
  VisitId id = 1;
  uint32 pet_id = 2;
  google.protobuf.Timestamp visit_date = 3;
  string description = 4;
}

message GetVisitsResponse { repeated Visit visits = 1; }

message CreateVisitRequest { Visit visit = 1; }

message CreateVisitResponse { Visit visit = 1; }

service Visits {
  rpc GetVisitsForPet(GetVisitsForPetRequest) returns (GetVisitsResponse) {}
  rpc GetVisitsForPets(GetVisitsForPetsRequest) returns (GetVisitsResponse) {}
  rpc CreateVisit(CreateVisitRequest) returns (CreateVisitResponse) {}
}
